--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.github.rutvijkumar.imagesearch.SearchScreenActivity"
+            android:name="com.github.rutvijkumar.imagesearch.activities.SearchScreenActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.github.rutvijkumar.imagesearch.ImageDisplayActivity"
+            android:name="com.github.rutvijkumar.imagesearch.activities.ImageDisplayActivity"
             android:label="@string/title_activity_image_display" >
         </activity>
     </application>
