--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,10 +21,16 @@
         <activity
             android:name="com.github.rutvijkumar.imagesearch.activities.SearchScreenActivity"
             android:label="@string/app_name" >
+             <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
         <activity
